# EnvironmentalTrends

./: README.md  pyproject.toml
EnvironmentalTrends/: EnvironmentalTrends.py
environmentaltrends/: __init__.py  data_prep.py  single_trend_analysis.py  trends.py  utils.py  validation.py
